# ratatui-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPONENT_GUIDE.md  Cargo.toml  EXTENSION_API.md  README.md  README.zh-CN.md  cliff.toml  lefthook.yaml  release.sh  todo.md
.claude/: settings.json
.claude/skills/dev-workflow/: SKILL.md
.codex/skills/ratatui-docs-demo-loop/: SKILL.md
.github/workflows/: CD.yaml  CI.yaml  pages.yml
crates/external-api-probe/: Cargo.toml
crates/external-api-probe/src/: lib.rs
crates/ratatui-kit/: Cargo.toml  README.md
crates/ratatui-kit-macros/: Cargo.toml
crates/ratatui-kit-macros/src/: adapter.rs  element.rs  lib.rs  router.rs  with_layout_style.rs
crates/ratatui-kit/src/: context.rs  handler.rs  lib.rs  multimap.rs  props.rs  reactive_handle.rs  test_util.rs
crates/ratatui-kit/src/atom/: mod.rs  use_atom.rs
crates/ratatui-kit/src/component/: component_helper.rs  instantiated_component.rs  mod.rs
crates/ratatui-kit/src/components/: alert_modal.rs  blockquote.rs  border.rs  center.rs  code_block.rs  confirm_modal.rs  context_provider.rs  divider.rs  fragment.rs  input.rs  list_state.rs  mod.rs  modal.rs  multi_select.rs  positioned.rs  search_input.rs  select.rs  shortcut_info_modal.rs  text.rs  textarea.rs  tree_select.rs  view.rs  virtual_list.rs  wrapped_text.rs
crates/ratatui-kit/src/components/adapter/: mod.rs  stateful_widget.rs  widget.rs
crates/ratatui-kit/src/components/diff/: mod.rs  render.rs
crates/ratatui-kit/src/components/markdown/: mod.rs  parser.rs
crates/ratatui-kit/src/components/router/: history.rs  mod.rs  outlet.rs  router_provider.rs
crates/ratatui-kit/src/components/scroll_view/: mod.rs  scrollbars.rs  state.rs
crates/ratatui-kit/src/components/table/: component.rs  layout.rs  mod.rs  render.rs  state.rs  types.rs  wrap.rs
crates/ratatui-kit/src/components/theme/: mod.rs  palette.rs
crates/ratatui-kit/src/element/: any_element.rs  element_ext.rs  extend_with_elements.rs  key.rs  mod.rs
crates/ratatui-kit/src/hooks/: mod.rs  use_async_state.rs  use_context.rs  use_effect.rs  use_exit.rs  use_future.rs  use_input.rs  use_insert_before.rs  use_memo.rs  use_on_drop.rs  use_router.rs  use_size.rs  use_state.rs
crates/ratatui-kit/src/input/: mod.rs
crates/ratatui-kit/src/render/: drawer.rs  harness.rs  layout_style.rs  mod.rs  tree.rs
crates/ratatui-kit/src/terminal/: cross_terminal.rs  mod.rs
crates/ratatui-kit/tests/: ui.rs
crates/ratatui-kit/tests/ui/fail/: any_element_borrow_escape.rs  any_element_borrow_escape.stderr  any_props_borrow_escape.rs  any_props_borrow_escape.stderr  bad_component_param.rs  bad_component_param.stderr  old_dollar_syntax.rs  old_hash_syntax.rs  old_hash_syntax.stderr  stateful_extra_args.rs  stateful_extra_args.stderr  widget_extra_args.rs  widget_extra_args.stderr  with_layout_style_non_named.rs
crates/ratatui-kit/tests/ui/pass/: dsl.rs  macro_call_child.rs  widget_by_value.rs
crates/rename-escape-probe/: Cargo.toml
crates/rename-escape-probe/src/: lib.rs
dev-notes/blog/: 2026-06-15-terminal-recording-from-zero.md  2026-06-18-ratatui-kit-0-7-three-rewrites.md
dev-notes/knowledge/: hooks-and-state.md  macros-and-props.md  runtime-architecture.md  toolchain.md
dev-notes/research/: theme-system.md
docs/: README.md  README.zh-CN.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/src/: consts.ts
docs/src/components/: HomePage.astro  HomePage.zh-CN.astro  Mermaid.astro
docs/src/styles/: brand.css
docs/tapes/: alert-modal.tape  async-state.tape  atom-state.tape  confirm-modal.tape  control-flow.tape  counter.tape  custom-hook.tape  custom-provider.tape  custom-widget.tape  hello-world.tape  input.tape  input_mutex.tape  modal.tape  multi-select.tape  router.tape  scrollview.tape  search-input.tape  select.tape  shortcut-info-modal.tape  table.tape  theme.tape  todo-app.tape  tree-select.tape  virtual-list.tape  virtual-multi-select.tape  wrapped-text.tape
examples/: control_flow.rs  counter.rs  custom_list.rs  hello_world.rs  hygiene_probe.rs  input.rs  input_mutex.rs  insert_before.rs  list.rs  memo.rs  modal.rs  router.rs  scrollview.rs  store.rs  textarea.rs  textarea.rs.disabled
examples/advanced/: custom_hook.rs  custom_provider.rs  custom_widget.rs
examples/apps/: todo_app.rs
examples/components/: alert_modal.rs  blockquote.rs  code_block.rs  confirm_modal.rs  diff_viewer.rs  divider.rs  input.rs  markdown.rs  markdown_streaming.rs  modal.rs  multi_select.rs  scrollview.rs  search_input.rs  select.rs  shortcut_info_modal.rs  table.rs  theme.rs  tree_select.rs  virtual_list.rs  virtual_multi_select.rs  wrapped_text.rs
examples/core/: control_flow.rs
examples/hooks/: async_state.rs  atom_state.rs
examples/input/: input_mutex.rs
examples/routing/: router.rs
examples/start/: counter.rs  hello_world.rs
openspec/changes/add-contrib-themes/: design.md  proposal.md  tasks.md
openspec/changes/add-test-suite/: tasks.md
openspec/changes/add-theme-system/: design.md  tasks.md
openspec/changes/cache-router-regex/: proposal.md
openspec/changes/extract-parsed-element-head/: tasks.md
openspec/changes/harden-audit-findings/: proposal.md  tasks.md
openspec/changes/input-layer-event-system/: design.md  proposal.md  tasks.md
openspec/changes/md-diff-highlight-components/: design.md  proposal.md  tasks.md
openspec/changes/render-test-harness/: proposal.md
openspec/changes/third-party-component-ecosystem/: proposal.md  tasks.md
openspec/specs/component-authoring/: spec.md
openspec/specs/component-from-props/: spec.md
openspec/specs/component-render-tests/: spec.md
openspec/specs/component-tree-contracts/: spec.md
openspec/specs/ecosystem-conventions/: spec.md
openspec/specs/element-borrow-lifetimes/: spec.md
openspec/specs/element-head-codegen/: spec.md
openspec/specs/extension-api-surface/: spec.md
openspec/specs/global-atoms/: spec.md
openspec/specs/hook-dependency-tracking/: spec.md
openspec/specs/reactive-state-core/: spec.md
skills/ratatui-kit/: SKILL.md
(+155 files in other folders)
