[workspace]
resolver = "3"
members = [
    "packages/ratatui-components",
    "packages/ratatui-kit",
    "packages/ratatui-kit-macros",
]

[package]
name = "ratatui-kit-examples"
version = "0.3.1"
edition = "2024"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full", "tracing"] }
ratatui-kit = { path = "packages/ratatui-kit", features = ["full"] }
console-subscriber = { version = "0.4.1" }
