[workspace]
resolver = "3"
members = ["packages/ratatui-kit", "packages/ratatui-kit-macros"]

[package]
name = "ratatui-kit-examples"
version = "0.5.9"
edition = "2024"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full", "tracing"] }
ratatui-kit = { path = "packages/ratatui-kit", features = ["full"] }
console-subscriber = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
