[workspace]
resolver = "3"
members = ["crates/ratatui-kit", "crates/ratatui-kit-macros"]

[package]
name = "ratatui-kit-examples"
version = "0.5.9"
edition = "2024"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full", "tracing"] }
ratatui-kit = { path = "crates/ratatui-kit", features = ["full"] }
console-subscriber = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Examples are grouped by learning path and registered explicitly so the public
# command stays stable: `cargo run --example <name>`.
[[example]]
name = "hello_world"
path = "examples/start/hello_world.rs"

[[example]]
name = "counter"
path = "examples/start/counter.rs"

[[example]]
name = "async_state"
path = "examples/hooks/async_state.rs"

[[example]]
name = "atom_state"
path = "examples/hooks/atom_state.rs"

[[example]]
name = "router"
path = "examples/routing/router.rs"

[[example]]
name = "control_flow"
path = "examples/core/control_flow.rs"

[[example]]
name = "input_mutex"
path = "examples/input/input_mutex.rs"

[[example]]
name = "input"
path = "examples/components/input.rs"

[[example]]
name = "search_input"
path = "examples/components/search_input.rs"

[[example]]
name = "scrollview"
path = "examples/components/scrollview.rs"

[[example]]
name = "wrapped_text"
path = "examples/components/wrapped_text.rs"

[[example]]
name = "modal"
path = "examples/components/modal.rs"

[[example]]
name = "confirm_modal"
path = "examples/components/confirm_modal.rs"

[[example]]
name = "alert_modal"
path = "examples/components/alert_modal.rs"

[[example]]
name = "shortcut_info_modal"
path = "examples/components/shortcut_info_modal.rs"

[[example]]
name = "select"
path = "examples/components/select.rs"

[[example]]
name = "multi_select"
path = "examples/components/multi_select.rs"

[[example]]
name = "table"
path = "examples/components/table.rs"
required-features = ["ratatui-kit/table"]

[[example]]
name = "divider"
path = "examples/components/divider.rs"

[[example]]
name = "blockquote"
path = "examples/components/blockquote.rs"

[[example]]
name = "code_block"
path = "examples/components/code_block.rs"

[[example]]
name = "diff_viewer"
path = "examples/components/diff_viewer.rs"
required-features = ["ratatui-kit/diff"]

[[example]]
name = "markdown"
path = "examples/components/markdown.rs"
required-features = ["ratatui-kit/markdown", "ratatui-kit/table"]

[[example]]
name = "markdown_streaming"
path = "examples/components/markdown_streaming.rs"
required-features = ["ratatui-kit/markdown", "ratatui-kit/table"]

[[example]]
name = "tree_select"
path = "examples/components/tree_select.rs"

[[example]]
name = "virtual_list"
path = "examples/components/virtual_list.rs"

[[example]]
name = "virtual_multi_select"
path = "examples/components/virtual_multi_select.rs"

[[example]]
name = "custom_widget"
path = "examples/advanced/custom_widget.rs"

[[example]]
name = "custom_hook"
path = "examples/advanced/custom_hook.rs"

[[example]]
name = "custom_provider"
path = "examples/advanced/custom_provider.rs"

[[example]]
name = "todo_app"
path = "examples/apps/todo_app.rs"
