[package]
name = "ratatui-kit"
version = "0.7.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/yexiyue/ratatui-kit"
description = "A framework for building interactive terminal user interfaces with ratatui"
authors = ["yexiyue <yexiyue666@qq.com>"]
# README 是指向仓库根 README.md 的符号链接，crate 与仓库共用同一份文档；
# cargo 打包时会把根 README 的内容嵌入 crate 包，crates.io / docs.rs 正常渲染。
readme = "README.md"

[dependencies]
futures = "0.3.32"
generational-box = "0.7.9"
any_key = "0.1.1"
ratatui-kit-macros = { version = "0.6.1", path = "../ratatui-kit-macros" }
crossterm = { version = "0.29.0", features = ["event-stream"] }
regex = { version = "1.12.4", optional = true }
ratatui = "0.30.1"
textwrap = "0.16.2"
unicode-width = { version = "0.2", optional = true }
tui-input = { version = "0.15.3", optional = true, features = ["ratatui"] }
tui-tree-widget = { version = "0.24.0", optional = true }
tui-widget-list = { version = "0.15.2", optional = true }
similar = { version = "2", optional = true }
pulldown-cmark = { version = "0.12", optional = true, default-features = false }
syntect = { version = "5", optional = true, default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy"] }

[dev-dependencies]
# proc-macro 的 UI 编译测试（pass/compile_fail）。失败用例只断言本库稳定报错。
trybuild = "1.0"
# README 的 Counter 示例用 `#[tokio::main]`;doctest 标 `no_run`(只编译验证、不真正跑 fullscreen),
# 但仍需 tokio 才能编译过该示例。
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[features]
default = []
# 注:`textarea` feature 暂时下线——其底层 `tui-textarea` 截至本次升级仍无支持
# ratatui 0.30 的版本(最新 0.7.0 钉死 ratatui ^0.29),会与 0.30 栈冲突。
# 组件源码隔离保留在 `src/components/textarea.rs`(未接入模块树),待 tui-textarea
# 发布 0.30 兼容版后,恢复下方 feature/依赖/example 并重新接入即可。
router = ["regex", "ratatui-kit-macros/router"]
# 全局响应式原子（Atom/use_atom）。纯主库实现，无宏依赖。
atom = []
input = ["tui-input"]
tree = ["tui-tree-widget"]
virtual-list = ["tui-widget-list"]
table = ["unicode-width"]
diff = ["similar"]
markdown = ["pulldown-cmark", "table"]
highlight = ["syntect"]
# markdown-highlight 依赖 markdown + highlight
markdown-highlight = ["markdown", "highlight"]

full = [
    "router",
    "atom",
    "input",
    "tree",
    "virtual-list",
    "table",
    "diff",
    "markdown",
    "highlight",
    "markdown-highlight",
    "ratatui-kit-macros/full",
]
